# QAsyncTask

./: .gitignore  CMakeLists.txt  README.md  main.cpp
demo/: main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
include/: qasynctask.h  qasynctaskargs.h  qasynctaskcreator.h  qasynctaskevent.h  qasynctaskreactor.h  qasynctaskresponseevent.h  qasynctaskresult.h
include/nlohmann/: json.hpp
src/: qasynctask.cpp  qasynctaskcreator.cpp  qasynctaskevent.cpp  qasynctaskreactor.cpp  qasynctaskresponseevent.cpp
